# delta-ingestor

./: .gitignore  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  ethereum.toml
.github/workflows/: build.yaml  ci.yml
common_libs/: Cargo.toml
common_libs/src/: delta_utils.rs  lib.rs  proto_utils.rs  utils.rs
common_libs/src/load_balancer/: load_balancers.rs  mod.rs  round_robin.rs
common_libs/src/load_balancer/tests/: mocks.rs  mod.rs  round_robin.rs
common_libs/src/tests/: mod.rs  test_proto_utils.rs
ingestor/: Cargo.toml
ingestor/src/: chain_piece.rs  config.rs  core.rs  errors.rs  main.rs  name_svc.rs
ingestor/src/clients/: ethereum.rs  mockchain.rs  mod.rs
ingestor/src/ingestors/: ethereum.rs  mockchain.rs  mod.rs
ingestor/src/producers/: delta.rs  mod.rs  nats.rs  stdout.rs
ingestor/src/proto/: ethereum.desc  ethereum.proto  ethereum.rs  helper.rs  mockchain.desc  mockchain.proto  mockchain.rs  mod.rs
ingestor/src/proto/serializers/: ethereum.rs  mockchain.rs  mod.rs
ingestor/src/resumers/: mod.rs  redis.rs  stdout.rs
ingestor/src/tests/: block_sample.json  helper.rs  logs_sample.json  mock_client.rs  mock_ingestor.rs  mod.rs  test_chain_piece.rs  test_concurrency_bug_download.rs  test_eth_clients.rs  test_eth_ingestor.rs  test_eth_serializer.rs  test_ingestor_core.rs  test_mock_block.rs  test_mock_chain.rs  test_name_service.rs  test_remote_config.rs  test_resumer_redis.rs  trace_call_sample.json  txs_sample.json
metrics/: Cargo.toml
metrics/src/: ingestor_metrics.rs  lib.rs
secrets/: ethereum.toml
