[package]
name = "common_libs"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4"
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1.4", features = ["derive", "env"] }
futures = "0.3"
relative-path = "1.7.3"
tokio-retry = "0.3.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
tokio-stream = "0.1.12"
futures-util = "0.3.27"
warp = "0.3.4"
flume = "0.10.14"
async-trait = "0.1.68"
arrow-array = "42.0.0"
arrow-schema = "42.0.0"
bytes = "1.4.0"
prost = "0.11.9"
prost-types = "0.11.9"
prost-build = "0.11.9"
prost-reflect = "0.11.4"
uuid = { version = "1.4.0", features = ["v4"] }
hex = "0.4.3"
crossbeam-queue = "0.3.8"
envy = "0.4.2"
sha2 = "0.10.7"
deltalake = { version = "0.16.5", features = ["s3"] }
